fixed canvas alignment

--- a/styles.css
+++ b/styles.css
@@ -259,6 +259,7 @@ button:hover{
     width: 200px;
 }
 canvas{
+    margin-top: 5rem;
     grid-row-start: 1;
     grid-row-end: 4;
     position: relative;
